@@ -343,11 +343,12 @@ $ cvtool combine -m tb \
 @node convert
 @subsection convert
 @cmindex convert
-@code{convert [-t|--type=uint8|float] [-f|--format=lum|color]}
+@code{convert [-t|--type=uint8|float] [-f|--format=lum|color|data]}
 
 Converts the input frames to another type and format. The default is to keep
 the input type and format. The output will be PNM for type uint8 and PFS
-for type float.
+for type float. If the format is set to @samp{data}, no color space conversion
+will take place.
 
 Example:
 @example
